--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 
 <div class="header"><h1> Tic Tac @ Hiver</h1></div>
-
+<div id="message"></div>
+<div class="refresh-container">
+    <button  id="refresh-btn" onclick=location.reload()>Refresh</button>
+</div>
 <div class="parentTop">
     <div class="gridTop">
         <div id="grid">
@@ -8,6 +11,7 @@
         </div>
     </div>
 </div>
+
 
 
 <script type="text/javascript" src="./index.js" ></script>
